--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     container_name: code-talk-redis
     command: redis-server --requirepass ${REDIS_PASSWORD:-redis_password}
     ports:
-      - "6379:6379"
+      - "6380:6379"  # Changed to avoid conflict with native Redis
     volumes:
       - redis_data:/data
     networks:
