--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -99,22 +99,13 @@ http {
         location / {
             limit_req zone=general_limit burst=50 nodelay;
 
-            proxy_pass http://client_app/;
+            proxy_pass http://client_app;
             proxy_http_version 1.1;
 
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-
-            # Support for React Router (SPA)
-            proxy_intercept_errors on;
-            error_page 404 = @client_fallback;
-        }
-
-        # Fallback for React Router
-        location @client_fallback {
-            proxy_pass http://client_app/;
         }
 
         # Static assets with caching
