Configure 3-tier gateway with Triton GPU and VPS CPU fallback
- Add Ollama-compatible endpoints to triton-adapter (/api/tags, /api/chat)
- Configure gateway tiers: GTX 1080 (Tier 1), VPS CPU (Tier 3)
- Add bge_embeddings and llama3_2_3b model configs for Triton
- Update docker-compose with proper tier URLs
- Fix PostgreSQL SSL connection issue
- Add curl to triton-adapter for healthcheck
- Remove deprecated NAS and tinyllama configurations

Note: Large model files (.gguf, .onnx, .engine) excluded from repo

--- a/triton-adapter/Dockerfile
+++ b/triton-adapter/Dockerfile
@@ -1,29 +1,13 @@
-# Triton Adapter - Lightweight Python service
-# Translates OpenVINO API to Triton Inference Server
-
 FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies for tritonclient and healthcheck
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends curl && rm -rf /var/lib/apt/lists/*
 
-# Install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application
 COPY server.py .
-
-# Environment defaults
-ENV PORT=8001
-ENV TRITON_URL=triton:8001
-ENV TRITON_GRPC_URL=triton:8002
-ENV USE_GRPC=true
-ENV MODEL_NAME=tinyllama
 
 EXPOSE 8001
 
