--- a/docker-compose.triton.yml
+++ b/docker-compose.triton.yml
@@ -22,7 +22,7 @@ services:
     environment:
       - XDG_CACHE_HOME=/cache
     volumes:
-      - ./models:/models:ro
+      - ./models:/models
       - triton-cache:/cache
     ports:
       - "8001:8001" # HTTP API
@@ -42,7 +42,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
-      start_period: 120s
+      start_period: 180s
     restart: unless-stopped
 
   # Triton Adapter - OpenVINO-compatible API wrapper
@@ -57,7 +57,7 @@ services:
       TRITON_URL: "triton:8001"
       TRITON_GRPC_URL: "triton:8002"
       USE_GRPC: "true"
-      MODEL_NAME: "tinyllama"
+      MODEL_NAME: "llama3_2_3b"
     ports:
       - "8004:8001" # Debug port
     depends_on:
@@ -81,7 +81,13 @@ services:
     container_name: code-talk-ai-gateway
     environment:
       PORT: "8002"
-      # Connect to Triton adapter (same API as OpenVINO)
+      # Tier 1: GTX 1080 via Triton (Ollama-compatible API)
+      LOCAL_GPU_URL: "http://triton-adapter:8001"
+      LOCAL_GPU_MODEL: "llama3_2_3b"
+      # Tier 3: VPS CPU fallback (OpenAI-compatible API)
+      LOCAL_URL: "http://86.48.29.183:8080"
+      LOCAL_MODEL: "llama-3.2-3b-instruct"
+      # Default inference URL
       INFERENCE_URL: "http://triton-adapter:8001"
     ports:
       - "8005:8002" # Debug port (8002 may conflict)
