--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     environment:
       NODE_ENV: ${NODE_ENV:-development}
       PORT: 8000
-      DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:5432/${POSTGRES_DB:-code_talk_db}
+      DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:5432/${POSTGRES_DB:-code_talk_db}?sslmode=disable
       JWT_SECRET: ${JWT_SECRET:-your_jwt_secret_change_in_production}
       REDIS_HOST: redis
       REDIS_PORT: 6379
