--- a/triton-adapter/requirements.txt
+++ b/triton-adapter/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
-tritonclient[all]==2.42.0
-numpy>=1.24.0
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.2
+tritonclient[all]==2.40.0
+numpy
