--- a/k8s/secrets.yaml.example
+++ b/k8s/secrets.yaml.example
@@ -2,87 +2,41 @@
 #
 # IMPORTANT:
 # 1. Copy this file to secrets.yaml
-# 2. Replace all placeholder values with your actual base64-encoded values
+# 2. Replace all placeholder values with your actual values
 # 3. NEVER commit secrets.yaml to version control
 #
-# To encode a value:
+# To encode a value (if using data instead of stringData):
 #   echo -n "your-value-here" | base64
-#
-# To decode a value (for verification):
-#   echo "base64-string" | base64 -d
 
 apiVersion: v1
 kind: Secret
 metadata:
-  name: code-talk-secrets
-  namespace: code-talk
-  labels:
-    app: code-talk
+  name: code-talk-secret
+  namespace: default
 type: Opaque
-data:
-  # PostgreSQL Connection String
-  # Format: postgresql://username:password@host:port/database
-  # Example: postgresql://user:pass@db.neon.tech:5432/code_talk
-  DATABASE_URL: cG9zdGdyZXNxbDovL3VzZXI6cGFzc0Bob3N0OjU0MzIvZGF0YWJhc2U=
+stringData:
+  # PostgreSQL connection string
+  # Format: postgres://user:password@host:port/database?sslmode=disable
+  database-url: "postgres://codetalk_user:codetalk_postgres123@postgresql-codetalk:5432/codetalk?sslmode=disable"
 
-  # JWT Secret (minimum 64 characters recommended)
-  # Generate with: openssl rand -base64 64 | tr -d '\n' | base64
-  JWT_SECRET: eW91cl9qd3Rfc2VjcmV0X2NoYW5nZV9tZQ==
+  # JWT signing secret (use a strong random string)
+  # Generate with: openssl rand -base64 32
+  jwt-secret: "your-jwt-secret-change-me"
 
-  # Redis Connection Details
-  # If using Redis URL format:
-  REDIS_URL: cmVkaXNzOi8vOnBhc3N3b3JkQGhvc3Q6NjM4MA==
-
-  # Or individual Redis fields:
-  REDIS_HOST: cmVkaXMuaG9zdC5jb20=
-  REDIS_PORT: NjM3OQ==
-  REDIS_PASSWORD: cmVkaXNfcGFzc3dvcmQ=
+  # Redis connection string
+  # Format: redis://default:password@host:port
+  redis-url: "redis://default:redis123@redis:6379"
 
 ---
-# Instructions for creating secrets.yaml:
+# Instructions:
 #
 # 1. Copy this file:
 #    cp k8s/secrets.yaml.example k8s/secrets.yaml
 #
-# 2. Encode your actual values:
+# 2. Edit secrets.yaml with your actual values
 #
-#    DATABASE_URL (PostgreSQL):
-#    echo -n "postgresql://user:pass@host:5432/db" | base64
-#
-#    JWT_SECRET (generate new one):
-#    openssl rand -base64 64 | tr -d '\n' | base64
-#
-#    REDIS_URL (if using URL format):
-#    echo -n "rediss://:password@host:6380" | base64
-#
-#    Or for individual Redis fields:
-#    echo -n "redis.host.com" | base64
-#    echo -n "6379" | base64
-#    echo -n "your-redis-password" | base64
-#
-# 3. Replace the placeholder values in secrets.yaml
-#
-# 4. Verify secrets are correct:
-#    kubectl get secret code-talk-secrets -n code-talk -o yaml
-#    kubectl get secret code-talk-secrets -n code-talk -o jsonpath='{.data.DATABASE_URL}' | base64 -d
-#
-# 5. Apply to cluster:
+# 3. Apply to cluster:
 #    kubectl apply -f k8s/secrets.yaml
 #
-# Database Service Options:
-#
-# Option 1: Heroku (existing setup)
-#   DATABASE_URL: postgres://user:pass@ec2-xxx.compute-1.amazonaws.com:5432/db
-#   REDIS_URL: rediss://:pass@ec2-xxx.compute-1.amazonaws.com:6380
-#
-# Option 2: Neon (recommended for K8s)
-#   DATABASE_URL: postgresql://user:pass@ep-xxx.us-east-2.aws.neon.tech/neondb
-#   Sign up: https://neon.tech
-#
-# Option 3: Supabase
-#   DATABASE_URL: postgresql://postgres:pass@db.xxx.supabase.co:5432/postgres
-#   Sign up: https://supabase.com
-#
-# Option 4: Upstash Redis (recommended for K8s)
-#   REDIS_URL: rediss://default:pass@xxx.upstash.io:6380
-#   Sign up: https://upstash.com
+# 4. Verify:
+#    kubectl get secret code-talk-secret -o yaml
