feat(security): httpOnly cookie auth + JWT_REFRESH_SECRET
- Update submodules with httpOnly cookie authentication
- Add JWT_REFRESH_SECRET to K8s deployment
- Add ALLOWED_ORIGINS to K8s deployment
- Update .env.example with new secrets and CORS config

--- a/.env.example
+++ b/.env.example
@@ -12,11 +12,13 @@ POSTGRES_PASSWORD=your_secure_postgres_password
 # Redis Configuration
 REDIS_PASSWORD=your_secure_redis_password
 
-# JWT Secret (MUST be changed in production! Use 64+ characters)
-JWT_SECRET=your_very_long_and_secure_jwt_secret_key_at_least_64_characters
+# JWT Secrets (MUST be changed in production! Use 32+ characters)
+# Generate with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+JWT_SECRET=your_very_long_and_secure_jwt_secret_key_at_least_32_characters
+JWT_REFRESH_SECRET=your_very_long_and_secure_jwt_refresh_secret_at_least_32_characters
 
 # CORS Configuration (comma-separated list of allowed origins)
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:80
+ALLOWED_ORIGINS=http://localhost:3000,https://code-talk-k8s.el-jefe.me
 
 # Client GraphQL Endpoints
 REACT_APP_GRAPHQL_HTTP_URI=http://localhost/graphql
