feat(rate-limit): add Upstash distributed rate limiting support
- Update server submodule with Upstash rate limiting
- Add Upstash env vars to k8s deployment (optional secrets)
- Add Upstash config to .env.example

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,9 @@ REACT_APP_GRAPHQL_WS_URI=ws://localhost/graphql
 
 # Optional: Version tag for Docker images
 VERSION=latest
+
+# Upstash Redis Configuration (for distributed rate limiting)
+# Get these from your Upstash dashboard: https://console.upstash.com
+# Leave empty to use in-memory rate limiting (fine for single-instance deployments)
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
