fix(k8s): correct secret key names to match External Secret
- Change kebab-case to UPPER_SNAKE_CASE to match actual secret keys
- DATABASE_URL, REDIS_URL, JWT_SECRET, JWT_REFRESH_SECRET
- UPSTASH_REDIS_REST_URL, UPSTASH_REDIS_REST_TOKEN

--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -46,22 +46,22 @@ spec:
           valueFrom:
             secretKeyRef:
               name: code-talk-secret
-              key: database-url
+              key: DATABASE_URL
         - name: REDIS_URL
           valueFrom:
             secretKeyRef:
               name: code-talk-secret
-              key: redis-url
+              key: REDIS_URL
         - name: JWT_SECRET
           valueFrom:
             secretKeyRef:
               name: code-talk-secret
-              key: jwt-secret
+              key: JWT_SECRET
         - name: JWT_REFRESH_SECRET
           valueFrom:
             secretKeyRef:
               name: code-talk-secret
-              key: jwt-refresh-secret
+              key: JWT_REFRESH_SECRET
         - name: ALLOWED_ORIGINS
           value: https://code-talk-k8s.el-jefe.me
         - name: AI_GATEWAY_URL
@@ -71,13 +71,13 @@ spec:
           valueFrom:
             secretKeyRef:
               name: code-talk-secret
-              key: upstash-redis-rest-url
+              key: UPSTASH_REDIS_REST_URL
               optional: true
         - name: UPSTASH_REDIS_REST_TOKEN
           valueFrom:
             secretKeyRef:
               name: code-talk-secret
-              key: upstash-redis-rest-token
+              key: UPSTASH_REDIS_REST_TOKEN
               optional: true
         resources:
           requests:
